--- a/.env.development
+++ b/.env.development
@@ -3,4 +3,4 @@ VITE_APP_TITLE = 'VUE前端技术'
 VITE_APP_PORT = 8088
 
 # 请求接口
-VITE_APP_BASE_URL = 'http://xxxxx'
+VITE_APP_BASE_URL = 'http://localhost:'+ VITE_APP_PORT +'/'
